force-app/main/default/objects/pse__Expense__c/fields/CT_Expense_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Expense_VAT_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense VAT Rate</label>
    <referenceTo>CT_Expense_VAT_Types__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>