force-app/main/default/objects/pse__Expense__c/fields/CT_Lost_Receipt_Comment__c.field-meta.xml
<CustomField>
    <fullName>CT_Lost_Receipt_Comment__c</fullName>
    <label>Lost Receipt Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>