force-app/main/default/objects/pse__Expense__c/fields/CT_Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>CT_Number_of_Nights__c</fullName>
    <label>Number of Nights</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>