force-app/main/default/objects/pse__Expense__c/fields/pse__Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Unit__c</fullName>
    <description>Must be kept in sync with Expense_Limit_Rate__c.Rate_Unit__c</description>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mile</fullName>
                <default>true</default>
                <label>Mile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>