force-app/main/default/objects/pse__Expense__c/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <formula>IF(ISNULL(pse__Applied_Expense_Rate__r.CT_VAT_Percentage__c),0,pse__Applied_Expense_Rate__r.CT_VAT_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>