force-app/main/default/objects/pse__Expense__c/validationRules/CT_Lost_Receipt_Comment_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>CT_Lost_Receipt_Comment_Needed</fullName>
    <active>true</active>
    <description>If the &apos;Lost Receipt&apos;button is checked then the comment must be entered</description>
    <errorConditionFormula>AND( pse__Lost_Receipt__c  == TRUE,LEN( CT_Lost_Receipt_Comment__c) &lt; 2)</errorConditionFormula>
    <errorDisplayField>CT_Lost_Receipt_Comment__c</errorDisplayField>
    <errorMessage>Please enter a comment as to why there is no receipt available</errorMessage>
</ValidationRule>