force-app/main/default/objects/pse__Expense__c/validationRules/Description_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Mandatory</fullName>
    <active>true</active>
    <description>Description_Mandatory on expense</description>
    <errorConditionFormula>ISBLANK(pse__Description__c)</errorConditionFormula>
    <errorMessage>Description is Mandatory.</errorMessage>
</ValidationRule>