force-app/main/default/objects/pse__Expense__c/validationRules/Hotel_Expense_needs_Nights.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_Expense_needs_Nights</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( pse__Type__c  , &apos;Hotel&apos;) , ( CT_Number_of_Nights__c == 0 || ISNULL(CT_Number_of_Nights__c )))</errorConditionFormula>
    <errorMessage>Please enter Number of Nights for Expense Type Hotel</errorMessage>
</ValidationRule>