force-app/main/default/objects/pse__Expense__c/validationRules/Mileage_and_No_Car_Type_Chosen.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_and_No_Car_Type_Chosen</fullName>
    <active>true</active>
    <description>Mileage and No Car Type Chosen</description>
    <errorConditionFormula>AND(pse__Distance__c &lt;&gt; 0, ( OR(ISNULL(CT_Expense_VAT_Rate__c),CT_Expense_VAT_Rate__c == &apos;&apos;)) )</errorConditionFormula>
    <errorMessage>With Mileage you must choose a Car Type for the Tax Rate</errorMessage>
</ValidationRule>