force-app/main/default/objects/pse__Expense__c/listViews/Non_Billable.listView-meta.xml
<ListView>
    <fullName>Non_Billable</fullName>
    <columns>NAME</columns>
    <columns>pse__Expense_Report__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Billing_Amount__c</columns>
    <columns>pse__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ffpsai__ExpenseGLACode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non Billable</label>
</ListView>